--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ctr-Sy-P2U">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,6 +18,23 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Custom Navigation Controller-->
+        <scene sceneID="rws-9g-W2o">
+            <objects>
+                <navigationController id="ctr-Sy-P2U" customClass="CustomNavigationController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oFg-ec-5cU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jlD-j6-f3F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hma-6q-i4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2151" y="-412"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -92,10 +109,11 @@
                         <color key="backgroundColor" red="0.94509803920000002" green="0.98039215690000003" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="KqS-Y1-USh"/>
                     <connections>
                         <outlet property="name1" destination="j0z-Pg-WE9" id="Ppr-1r-Pjb"/>
                         <outlet property="name2" destination="ZNZ-fs-7Ck" id="sAK-wS-6gu"/>
-                        <segue destination="fbl-sZ-TIu" kind="presentation" identifier="InputNameToDisplay" id="wzQ-s2-lDK"/>
+                        <segue destination="fbl-sZ-TIu" kind="show" identifier="InputNameToDisplay" id="JMN-SQ-9XU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -141,12 +159,12 @@
                         <viewLayoutGuide key="safeArea" id="1T0-Ld-ofe"/>
                     </view>
                     <connections>
-                        <segue destination="QRi-ft-NKl" kind="presentation" identifier="DisplayNameSegue" id="k9h-01-ncC"/>
+                        <segue destination="QRi-ft-NKl" kind="presentation" id="YOh-YM-yqn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VH6-ru-gdR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-250.40000000000001" y="-412.44377811094455"/>
+            <point key="canvasLocation" x="-230" y="-412"/>
         </scene>
         <!--Tela Cronometro View Controller-->
         <scene sceneID="qZi-VT-ZeW">
