--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -21,6 +21,7 @@
         <!--Custom Navigation Controller-->
         <scene sceneID="rws-9g-W2o">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hma-6q-i4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="ctr-Sy-P2U" customClass="CustomNavigationController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oFg-ec-5cU">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -31,7 +32,6 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jlD-j6-f3F"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hma-6q-i4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2151" y="-412"/>
         </scene>
@@ -158,8 +158,17 @@
                         <color key="backgroundColor" red="0.94509803920000002" green="0.98039215690000003" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="1T0-Ld-ofe"/>
                     </view>
+                    <navigationItem key="navigationItem" id="LL3-0S-0Th">
+                        <barButtonItem key="leftBarButtonItem" image="backButton" style="plain" id="lNx-XE-uP0">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="mkc-Me-Gu7">
+                                <rect key="frame" x="16" y="7" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="backButton"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <segue destination="QRi-ft-NKl" kind="presentation" id="YOh-YM-yqn"/>
+                        <segue destination="QRi-ft-NKl" kind="presentation" identifier="DisplayNameSegue" id="YOh-YM-yqn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VH6-ru-gdR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -383,5 +392,6 @@
         <image name="bNext_v1_NameScreen" width="165" height="165"/>
         <image name="bPause_v1_GameScreen" width="60" height="72"/>
         <image name="bPlay_v1_GameScreen" width="165" height="165"/>
+        <image name="backButton" width="36" height="60"/>
     </resources>
 </document>
